# contacts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/contacts/: __init__.py  __main__.py  cli.py  config.py
